# GAMES101_Homework

MyRenderer/: MyRenderer.sln
MyRenderer/MyRenderer/: MyRenderer.vcxproj  MyRenderer.vcxproj.filters  camera.cpp  camera.h  canvas.cpp  homework.cpp  light.cpp  light.h  model.cpp  model.h  tgaimage.h
MyRenderer/MyRenderer/Debug/: MyRenderer.exe.recipe  MyRenderer.ilk  canvas.obj.enc  source.obj.enc  vc142.idb
MyRenderer/MyRenderer/Debug/MyRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MyRenderer/MyRenderer/output/: lesson00.tga  lesson01.tga  lesson02.tga  lesson03.tga  lesson05.tga
games101/Assignment3/: Computer Graphics - 快捷方式.lnk
games101/Assignment3/Code/: CMakeLists.txt  main.cpp
games101/Assignment5/Code/: CMakeLists.txt
games101/Assignment5/Code/src/: CMakeLists.txt
games101/Assignment5/Code/test/: CMakeLists.txt
games101/Assignment7/PA7/Assignment7/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp  main.cpp
games101/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
games101/PA6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  main.cpp
games101/PA7/Assignment7/: Bounds3.hpp  Scene.cpp  Triangle.hpp  main.cpp
games101/新建文件夹/: BVH.cpp  Bounds3.hpp  Triangle.hpp
games202/GAMES202_homework0/src/loads/: loadOBJ.js
games202/GAMES202_homework0/src/materials/: PhongMaterial.js
games202/GAMES202_homework0/src/shaders/: InternalShader.js
